# moni

./: .editorconfig  .gitignore  .md-doc-timestamp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  gradle.properties  release.properties  settings.gradle.kts
moni-core/: Cargo.toml
moni-core/src/: lib.rs
moni-core/src/ai/: domain.rs  errors.rs  mod.rs  preset_repo.rs  service.rs
moni-core/src/ai/http/: client.rs  mod.rs
moni-core/src/ai/providers/: gemini.rs  mod.rs  openai_chat.rs
moni-core/src/ai/schema/: bookkeeping_output.rs  json_schema.rs  mod.rs
moni-core/src/core/: dispatch.rs  dispatch_budget.rs  dispatch_category.rs  dispatch_dev.rs  dispatch_record.rs  dispatch_settings.rs  dispatch_stats.rs  error.rs  init.rs  mod.rs  runtime.rs
moni-core/src/db/: budget_repo.rs  category_repo.rs  chat_repo.rs  connection.rs  mod.rs  record_repo.rs  schema.rs  settings_repo.rs
moni-core/src/domain/: mod.rs
moni-core/src/dto/: budget_dto.rs  category_dto.rs  mod.rs  record_dto.rs
moni-core/src/models/: auto_backup.rs  backup.rs  effects.rs  intent.rs  mod.rs  state.rs
moni-core/src/shared/: constants.rs  date_utils.rs  mod.rs  types.rs
moni-core/tests/: backup_e2e_test.rs  backup_exporter_progress_test.rs  backup_exporter_test.rs  backup_importer_errors_test.rs  backup_importer_test.rs  backup_inspect_test.rs  backup_manifest_test.rs  backup_migrations_manifest_test.rs  backup_restore_row_mismatch_test.rs  category_repo_coverage_test.rs  category_repo_test.rs  csv_generator_test.rs  dispatch_budget_test.rs  dispatch_category_edges_test.rs  dispatch_category_test.rs  dispatch_core_unknown_intents_test.rs  dispatch_dev_seed_presets_test.rs  dispatch_dev_settings_stats_test.rs  dispatch_dev_test.rs  dispatch_misc_test.rs  dispatch_record_test.rs  dispatch_settings_test.rs  dispatch_stats_test.rs  dto_helpers_test.rs  error_conversion_test.rs  expression_evaluator_test.rs  ffi_lib_methods_test.rs  foreign_key_test.rs  json_generator_test.rs  migrations_test.rs  mock_data_generator_test.rs  overview_metrics_test.rs  pagination_bounds_test.rs  record_repo_coverage_test.rs  record_repo_test.rs  runtime_debug_test.rs  schema_idempotent_test.rs  stats_calculator_test.rs
moni-core/tests/common/: mod.rs
(+450 files in other folders)
