[package]
name = "moni-core"
version = "0.1.0"
edition = "2024"

[lib]
name = "moni_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
bindgen = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["bindgen"]

[dependencies]
moni-contracts = { path = "../moni-contracts" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
uniffi = "0.31.1"
rusqlite = { version = "0.34", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }
